# typed-error

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
src/: code.rs  detail.rs  error.rs  http.rs  kind.rs  lib.rs  response.rs  retry.rs
src/integration/: axum.rs
src/integrations/: mod.rs  tonic.rs
tests/: axum_tests.rs  code_tests.rs  detail_tests.rs  error_tests.rs  http_tests.rs  kind_tests.rs  response_tests.rs  retry_tests.rs  tonic_tests.rs
