[package]
name = "typed-error"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Meisam Khoshbakht"]
description =  "A typed, transport-aware error system for Rust services with structured metadata, retry hints, and HTTP/gRPC mapping."
repository = "https://github.com/meisamkht/typed-error"
homepage = "https://github.com/meisamkht/typed-error"
readme = "README.md"
keywords = ["error", "errors", "http", "grpc", "axum"]
categories = ["rust-patterns", "development-tools"]

[features]
default = ["std"]

std = []
http = ["dep:http"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]

axum = ["http", "json", "dep:axum"]
tonic = ["dep:tonic"]
tracing = ["dep:tracing"]

full = ["http", "json", "axum", "tonic", "tracing"]

[dependencies]
http = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
tonic = { version = "0.14", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }